--- a/style.css
+++ b/style.css
@@ -186,6 +186,16 @@ body {
     position: absolute;
 }
 
+.loadingdata {
+    text-align: center;
+    z-index: 10;
+    transform: translate(-50%, 50%);
+    top: 45%;
+    left: 50%;
+    margin: 0;
+    position: absolute;
+}
+
 .darklighttoggle {
     background: #E92F30;
     padding: 0;
