--- a/style.css
+++ b/style.css
@@ -186,7 +186,7 @@ body {
     position: absolute;
 }
 
-.loadingdata {
+.loadingdata2 {
     text-align: center;
     z-index: 10;
     transform: translate(-50%, 50%);
